fix: use immediate rollout to avoid Cloudflare Containers JSON parsing bug
- Add rollout_step_percentage: [100] to wrangler.jsonc configs to use immediate rollout
- Add observability config to enable container logs

The gradual rollout was failing with 'undefined is not valid JSON' error during
the Cloudflare Containers API rollout step. Using immediate rollout bypasses
this issue while still deploying successfully.

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -15,7 +15,9 @@
     {
       "class_name": "DeltEchoContainer",
       "image": "./Dockerfile.cloudflare",
-      "max_instances": 10
+      "max_instances": 10,
+      // Use immediate rollout to avoid gradual rollout issues
+      "rollout_step_percentage": [100]
     }
   ],
 
